assets/style/style.css
@keyframes fadeIn {
  from {
    opacity: 0.2;
  }
  to {
    opacity: 1;
  }
}

html {
  height: 100%;
}

body {
  height: 100vh;

  /* background-image:linear-gradient(purple, white); */
  /* JD reduced img quality to improve load time 9/29. New version is back3.jpg. Original back.jpg still in assets */
  background: url(../images/back3.jpg);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  overflow: hidden;
  background-attachment: fixed;
}

#history-list {
  /* margin-top: 2rem; */
  background-color: lightgray;
  border-color: black;
  border: solid;
  border-radius: 2rem;
  font-size: 20px;
  border-radius: 5px;
  height: 20rem;
  overflow-y: scroll;
  overflow-x: auto;
  padding: 20px;
  text-align: center;
  margin: 2rem;
}

.trash {
  white-space: nowrap;
  cursor: pointer;
  border: 0px solid #3498db;
  background-color: transparent;
}

 .trash:hover{
  background-color: #f2a441;
}

.prev-search {
  cursor: pointer;
  border-radius: 10px;
  padding: 5px;
  white-space: nowrap;
  display: inline-block;
  border: 1px solid black;
  margin-bottom: 10px;
  font-family: "Orbitron", sans-serif;
  font-size: 15px;
}

.prev-search:hover {
  background-color: #f2a441;
}

#info-box {
  margin-top: 1rem;
  font-family: "Orbitron", sans-serif;
  font-weight: lighter !important;
  border: 2px solid black;
  font-size: 17px;
  box-shadow: 0px 0px 6px 2px #f2a441, 0px 0px 6px 2px black;
}

#note-box {
  margin-top: 1rem;
  padding: 1rem;
  height: 6rem;
  font-family: "Roboto", sans-serif;
  font-weight: bolder !important;
  font-size: 17px;
  background-color: whitesmoke;
  text-align: center;
  resize: none;
  overflow-y: scroll;
}

#input {
  background-color: white;
  border-bottom: none;
  width: 40%;
  text-align: center;
  font-size: 15px !important;
  font-weight: bold;
  margin: 20px;
  border-radius: 15px;
}

/*Sets default value of card class to hidden */
.card {
  visibility: hidden;
  z-index: 10;
}

.fas {
  margin-left: 1rem;
  margin-right: 1rem;
}

.fab {
  margin-left: 1rem;
  margin-right: 1rem;
}

#note-save-btn, #note-trash-btn{
  font-size: 2rem;
}

#note-save-btn:hover,
#note-trash-btn:hover{
  color: #f2a441;
  cursor: pointer;
}

#note-save-btn,
#note-trash-btn {
  margin-left: 1rem;
  margin-right: 1rem;
}

.search-btn {
  background-color: #f2a441 !important;
  text-transform: none;
  border-radius: 15px;
}

.record {
  width: 35%;
  height: 50%;
  margin-bottom: 0% !important;
}

h1 {
  font-family: "Orbitron", sans-serif;
  font-size: 40px;
  letter-spacing: 5px;
}

h4 {
  font-family: "Orbitron", sans-serif;
}

#input {
  background-color: white;
  border-bottom: none;
  width: 40%;
  text-align: center;
  font-size: 20px;
  font-weight: bold;
  margin: 20px;
  border-radius: 6px;
}

.search-btn:hover {
  transform: scale(1.1);
}

.tour-content {
  margin-top: 16rem !important;
  color: rgb(29, 12, 12);
  background-color: rgba(226, 218, 210, 0.801);
  padding: 20px !important;
  border-radius: 10px;
  /* border: 2px solid #F2A441; */
  box-shadow: 0px 0px 30px 4px #f2a441, 0px 0px 20px 4px black;
  width: 30rem;
  height: 40rem;
  overflow-y: auto;
}

.main-content {
  margin-top: 16rem !important;
  color: rgb(29, 12, 12);
  background-color: rgba(226, 218, 210, 0.801);
  padding: 20px !important;
  border-radius: 10px;
  /* border: 2px solid #F2A441; */
  box-shadow: 0px 0px 30px 4px #f2a441, 0px 0px 20px 4px black;
  width: 30rem;
  /* height: 22rem; */
  overflow-y: auto;

}

.dev-font{
  font-family: "Orbitron", sans-serif;
}

.about-page{
  line-height: 2rem;
  font-weight: bolder;
  font-size: .9rem;
}

.trash {
  display: inline-block;
  cursor: pointer;
  border: 0px solid #3498db;
  background-color: transparent;
}

.home-btn {
  font-size: 35px;
  transition: ease-in 0.2s;
}

.home-btn:hover {
  cursor: pointer;
  transform: scale(1.2);
  color: #f2a441;
}

.thumbnail {
  height: 10rem;
  width: 10rem;
  border-radius: 1rem;
}

#youtube-btn,
#info-btn,
#search-nav-btn,
#history-btn,
#tour-btn {
  transition: ease-in 0.2s;
  color: black;
}

#youtube-btn:hover,
#info-btn:hover,
#search-nav-btn:hover,
#history-btn:hover,
#tour-btn:hover {
  transform: scale(1.1);
  color: #f2a441;
  cursor: pointer;
}

#tour-header {
  font-size: 20px;
}

/* @media only screen and (min-height: 800px){
    .main-content{
        margin-top: 250px;
    }
}
@media only screen and (max-height: 500px){
    .main-content{
        margin-top: 50px;
    }
  
} */

/* THIS IS FOR THE NAV */

#list{
   font-size: 20px;
   white-space: nowrap;
   width: 90%;
   line-height: 4rem;
  }

  .nav-font{
    font-family: "Orbitron", sans-serif;
    font-weight: normal;
    font-size: 16px;
  }

  #about-drop-btn{
    line-height: 6rem;
  }

  #youtube-drop-btn:hover,
  #info-drop-btn:hover,
  #calendar-drop-btn:hover,
  #artist-drop-btn:hover,
  #search-drop-btn:hover,
  #about-drop-btn:hover{
    color: #f2a441;
    cursor: pointer;
  }

.nav {
  -webkit-transition: left 0.5s ease;
  -moz-transition: left 0.5s ease;
  -ms-transition: left 0.5s ease;
  -o-transition: left 0.5s ease;
  transition: left 0.5s ease;
  background: rgba(226, 218, 210, 0.801);
  color: black;
  font-size: 2rem;
  height: 100vh;
  left: -20rem;
  padding: 6rem 2rem 2rem 2rem;
  position: fixed;
  top: 0;
  width: 17rem;
  z-index: 1;
}

.nav.expanded {
  left: 0;
}

.nav ul {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  list-style: none;
  margin: 0;
  padding: 0;
}
.nav-toggle {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  cursor: pointer;
  height: 2rem;
  left: 2rem;
  position: fixed;
  top: 2rem;
  width: 3rem;
  z-index: 2;
}

.nav-toggle:hover {
  opacity: 0.8;
}

.nav-toggle .nav-toggle-bar,
.nav-toggle .nav-toggle-bar::after,
.nav-toggle .nav-toggle-bar::before {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
  background: white;
  content: "";
  height: 0.4rem;
  width: 100%;
}

.nav-toggle .nav-toggle-bar {
  margin-top: 0;
}

.nav-toggle .nav-toggle-bar::after {
  margin-top: 0.8rem;
}

.nav-toggle .nav-toggle-bar::before {
  margin-top: -0.8rem;
}

.nav-toggle.expanded .nav-toggle-bar {
  background: transparent;
}

.nav-toggle.expanded .nav-toggle-bar::after,
.nav-toggle.expanded .nav-toggle-bar::before {
  background: black;
  margin-top: 0;
}

.nav-toggle.expanded .nav-toggle-bar::after {
  -ms-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

.nav-toggle.expanded .nav-toggle-bar::before {
  -ms-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
}

@media screen and (max-width: 800px) {
  iframe {
    width: 220px;
    height: 170px;
  }
}

@media screen and (max-width: 375px){
  #main-content{
    margin-top: 5rem;
  }
}

@media only screen and (max-width: 400px){
   #history-list{
     width: 100%;
   }
}

